tests/ui/feature-gates/feature-gate-naked_functions_target_feature.stderr
error[E0658]: `#[target_feature(/* ... */)]` is currently unstable on `#[naked]` functions
  --> $DIR/feature-gate-naked_functions_target_feature.rs:7:1
   |
LL | #[target_feature(enable = "avx2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #138568 <https://github.com/rust-lang/rust/issues/138568> for more information
   = help: add `#![feature(naked_functions_target_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
